--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,3 +1,4 @@
 
-// OpenRouter API Key
-OPENROUTER_API_KEY=... --- IGNORE ---
+#  OpenRouter API Key
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+SYSTEM_PROMPT=your_default_system_prompt_here
