--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,14 +9,17 @@
    },
    "devDependencies": {
       "@types/bun": "latest",
+      "@types/connect-history-api-fallback": "^1.5.4",
       "@types/express": "^5.0.3"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "connect-history-api-fallback": "^2.0.0",
       "dotenv": "^17.2.1",
       "express": "^5.1.0",
+      "express-history-api-fallback": "^2.2.1",
       "openai": "^5.16.0",
       "zod": "^4.1.3"
    }
