--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,17 +10,23 @@
    "devDependencies": {
       "@types/bun": "latest",
       "@types/connect-history-api-fallback": "^1.5.4",
-      "@types/express": "^5.0.3"
+      "@types/crypto-js": "^4.2.2",
+      "@types/express": "^5.0.3",
+      "@types/uuid": "^10.0.0"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "@upstash/search": "^0.1.5",
+      "@upstash/vector": "^1.2.2",
       "connect-history-api-fallback": "^2.0.0",
+      "crypto-js": "^4.2.0",
       "dotenv": "^17.2.1",
       "express": "^5.1.0",
       "express-history-api-fallback": "^2.2.1",
       "openai": "^5.16.0",
+      "uuid": "^11.1.0",
       "zod": "^4.1.3"
    }
 }
