feat: Implement Gemini 2.5 Pro service with multimodal capabilities including chat, image, audio, and video generation
- Added gemini.service.ts for handling chat, image, audio, and video generation using Gemini 2.5 Pro.
- Introduced image-generation.service.ts for DALL-E integration for real image generation.
- Updated model-selector.service.ts to include new model configurations and capabilities.
- Created test-backend.http for testing various endpoints including chat, image generation, and audio processing.
- Enhanced model.types.ts to support new task types and model providers.
- Added detailed HTTP request examples in test-backend.http for easy testing of the backend API.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
    "type": "module",
    "private": true,
    "scripts": {
-      "dev": "bun run index.ts",
+      "dev": "concurrently \"cd packages/server && bun run dev\" \"cd packages/client && bun run dev\"",
+      "dev:server": "cd packages/server && bun run dev",
+      "dev:client": "cd packages/client && bun run dev",
       "build": "cd packages/client && bun run build",
+      "build:all": "bun run build && cd packages/server && bun run build",
       "start": "cd packages/server && bun run start",
       "format": "prettier --write .",
       "prepare": "husky"
