--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,13 +12,17 @@
    "dependencies": {
       "@radix-ui/react-slot": "^1.2.3",
       "@tailwindcss/vite": "^4.1.12",
+      "@types/uuid": "^11.0.0",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
-      "lucide-react": "^0.542.0",
+      "lucide-react": "^0.544.0",
       "react": "^19.1.1",
       "react-dom": "^19.1.1",
+      "react-router-dom": "^7.9.1",
       "tailwind-merge": "^3.3.1",
-      "tailwindcss": "^4.1.12"
+      "tailwindcss": "^4.1.12",
+      "uuid": "^13.0.0",
+      "zustand": "^5.0.8"
    },
    "devDependencies": {
       "@eslint/js": "^9.33.0",
