--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,24 +4,28 @@
    "type": "module",
    "private": true,
    "scripts": {
-      "start": "bun run index.ts",
-      "dev": "bun --watch run  index.ts"
+      "start": "bun index.ts",
+      "dev": "bun --watch index.ts"
    },
    "devDependencies": {
       "@types/bun": "latest",
       "@types/crypto-js": "^4.2.2",
-      "@types/express": "^5.0.3"
+      "@types/express": "^5.0.3",
+      "concurrently": "^9.2.1"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "@google/genai": "^1.20.0",
+      "@types/wav": "^1.0.4",
       "@upstash/redis": "^1.35.3",
       "@upstash/search": "^0.1.5",
       "crypto-js": "^4.2.0",
       "dotenv": "^17.2.1",
       "express": "^5.1.0",
       "openai": "^5.16.0",
+      "wav": "^1.0.2",
       "zod": "^4.1.3"
    }
 }
