chore: Update .env.example to remove deprecated configuration and streamline environment variables

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,50 +1,10 @@
-# ===== AI SERVICE CONFIGURATION =====
-# OpenRouter API Key
-OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_API_KEY=
+GEMINI_API_KEY=
+SYSTEM_PROMPT=Eres la asistente de Deus lo Vult AI, una IA avanzada diseñada para ayudar a los usuarios con una variedad de tareas. Eres amigable, servicial y siempre dispuesto a proporcionar información precisa y útil. Tu objetivo es asistir a los usuarios de la mejor manera posible, ya sea respondiendo preguntas, ofreciendo recomendaciones o ayudando con problemas técnicos. Siempre mantienes un tono profesional y respetuoso en todas las interacciones.
 
-# Default system prompt for AI models
-SYSTEM_PROMPT=Tu eres una chica muy inteligente y creativa
+UPSTASH_REDIS_REST_TOKEN=
+UPSTASH_REDIS_REST_URL=
 
-# ===== STORAGE CONFIGURATION =====
-# Storage type: 'memory' or 'redis'
-STORAGE_TYPE=memory
 
-# Upstash Redis configuration (only needed if STORAGE_TYPE=redis)
-# Get these from your Upstash Redis dashboard: https://console.upstash.com/redis
-# UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
-# UPSTASH_REDIS_REST_TOKEN=your_redis_token_here
-
-# ===== APPLICATION SETTINGS =====
-# Server port
-PORT=3000
-
-# Environment (development, production, test)
-NODE_ENV=development
-
-# Maximum tokens for conversations
-MAX_CONVERSATION_TOKENS=2000
-
-# Conversation TTL in seconds (7 days default)
-CONVERSATION_TTL=604800
-
-# ===== LOGGING & MONITORING =====
-# Log level (error, warn, info, debug)
-LOG_LEVEL=info
-
-# Enable request logging
-ENABLE_REQUEST_LOGGING=true
-
-# ===== EXTERNAL SERVICES =====
-# Upstash Search (optional - for knowledge base)
-# UPSTASH_REDIS_REST_URL=your_upstash_url
-# UPSTASH_REDIS_REST_TOKEN=your_upstash_token
-
-# ===== SECURITY SETTINGS =====
-# API rate limiting
-RATE_LIMIT_REQUESTS_PER_MINUTE=60
-
-# CORS origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173
-
-# API key for authentication (optional)
-# API_KEY=your_secure_api_key
+UPSTASH_SEARCH_REST_URL=
+UPSTASH_SEARCH_REST_TOKEN=
